# powersync-js

./: .dockerignore  .gitignore  .gitmodules  .lintstagedrc.json  .npmignore  .nvmrc  .prettierignore  .prettierrc  Cargo.toml  README.md  audit-ci.jsonc  dev-tsconfig.js  lerna.json  package.json  persistors.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.demo.json  tsconfig.json  tsconfig.tests.json  typedoc.json  verdaccio-config.yaml  vitest.workspace.ts
.changeset/: afraid-apples-learn.md  afraid-bulldogs-check.md  afraid-carpets-sin.md  angry-brooms-attend.md  angry-ducks-sneeze.md  angry-eggs-whisper.md  angry-foxes-hammer.md  angry-mayflies-ring.md  angry-planes-accept.md  angry-planets-clean.md  angry-pumpkins-double.md  attachment-streaming-transport.md  beige-actors-flash.md  beige-jars-whisper.md  beige-pigs-occur.md  beige-plums-cover.md  beige-vans-hunt.md  big-ducks-peel.md  big-mugs-admire.md  blue-cameras-flash.md  blue-chairs-cross.md  blue-pets-count.md  brave-owls-tease.md  breezy-carrots-fold.md  breezy-crews-fry.md  breezy-pumpkins-smash.md  bright-cooks-change.md  bright-nails-marry.md  bright-snakes-clean.md  bright-stingrays-buy.md  bright-yaks-pump.md  brown-eggs-dress.md  brown-insects-tell.md  brown-moose-chew.md  brown-radios-report.md  brown-steaks-drop.md  brown-suits-push.md  calm-baboons-worry.md  calm-hats-retire.md  calm-pans-worry.md  (+489 more)
demos/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
demos/tauri-app/src-tauri/capabilities/: default.json
demos/tauri-app/src-tauri/src/: lib.rs
docs/: .env.example  (+8 more)
(+1492 files in other folders)
