# Having a top-level Cargo.toml makes it easier to use rust-analyzer in VS Code when opening
# this project.

[workspace]
resolver = "3"
members = [
    "packages/tauri",
    "demos/tauri-app/src-tauri"
]

[workspace.package]
repository = "https://github.com/powersync-ja/powersync-js"

[patch.crates-io]
powersync = { path = '/Users/simon/src/libpowersync/powersync' }
