[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.6", default-features = false }

[dependencies]
tauri = { version = "2.10.3" }
tauri-plugin-powersync = { path = "../../../packages/tauri" }
powersync = "0.0.5"
async-trait = "0.1.89"
serde = "1"
serde_json = "1"
reqwest = { version = "0.13.0", features = ["json"] }
log = "0.4"
futures-lite = "2"
